@@ -69,8 +69,7 @@
                         (mtch
                          (concatenate
                            (map (lambda (pat)
-                                  (grep (irregex (##sys#glob->regexp pat))
-                                        eggs))
+                                  (grep (irregex (glob->sre pat)) eggs))
                              patterns)))
                         (else 
                           (filter 
