@@ -3,18 +3,18 @@
 
 (use irregex)
 
-(assert (irregex-match (##sys#glob->regexp "foo.bar") "foo.bar"))
-(assert (irregex-match (##sys#glob->regexp "foo*") "foo.bar"))
-(assert (irregex-match (##sys#glob->regexp "foo/*") "foo/bar"))
-(assert (not (irregex-match (##sys#glob->regexp "foo/*") "foo/bar/baz")))
-(assert (irregex-match (##sys#glob->regexp "foo/*/*") "foo/bar/baz"))
-(assert (not (irregex-match (##sys#glob->regexp "foo/*") "foo/.bar")))
-(assert (irregex-match (##sys#glob->regexp "*foo") "xyzfoo"))
-(assert (not (irregex-match (##sys#glob->regexp "*foo") ".foo")))
-(assert (not (irregex-match (##sys#glob->regexp "*foo*") "a.fooxxx/yyy")))
-(assert (irregex-match (##sys#glob->regexp "*foo*") "fooxxx"))
-(assert (irregex-match (##sys#glob->regexp "main.[ch]") "main.c"))
-(assert (irregex-match (##sys#glob->regexp "main.[ch]") "main.h"))
-(assert (not (irregex-match (##sys#glob->regexp "main.[ch]") "main.cpp")))
-(assert (irregex-match (##sys#glob->regexp "main.[-c]") "main.h"))
-(assert (not (irregex-match (##sys#glob->regexp "main.[-h]") "main.h")))
+(assert (irregex-match (glob->sre "foo.bar") "foo.bar"))
+(assert (irregex-match (glob->sre "foo*") "foo.bar"))
+(assert (irregex-match (glob->sre "foo/*") "foo/bar"))
+(assert (not (irregex-match (glob->sre "foo/*") "foo/bar/baz")))
+(assert (irregex-match (glob->sre "foo/*/*") "foo/bar/baz"))
+(assert (not (irregex-match (glob->sre "foo/*") "foo/.bar")))
+(assert (irregex-match (glob->sre "*foo") "xyzfoo"))
+(assert (not (irregex-match (glob->sre "*foo") ".foo")))
+(assert (not (irregex-match (glob->sre "*foo*") "a.fooxxx/yyy")))
+(assert (irregex-match (glob->sre "*foo*") "fooxxx"))
+(assert (irregex-match (glob->sre "main.[ch]") "main.c"))
+(assert (irregex-match (glob->sre "main.[ch]") "main.h"))
+(assert (not (irregex-match (glob->sre "main.[ch]") "main.cpp")))
+(assert (irregex-match (glob->sre "main.[-c]") "main.h"))
+(assert (not (irregex-match (glob->sre "main.[-h]") "main.h")))
