@@ -47,6 +47,7 @@
   - Keywords are now always written in "portable" style by WRITE, so
     that the reader's keyword style doesn't need to match the writer's.
   - The environment variable `CHICKEN_PREFIX` has been removed.
+  - Added the `glob->sre` procedure to the irregex library.
 
 - Module system
   - The compiler has been modularised, for improved namespacing.  This
